# wildfire-simulator-v3

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml  fly.toml
api/: Dockerfile  pyproject.toml
api/src/firesim_api/: __init__.py  main.py  settings.py
api/src/firesim_api/routers/: health.py  simulations.py  weather.py
api/src/firesim_api/schemas/: __init__.py  simulation.py
api/src/firesim_api/services/: runner.py
api/src/firesim_api/ws/: manager.py
api/tests/: test_api.py  test_ca_simulation.py  test_weather.py
engine/: pyproject.toml
engine/src/firesim/: __init__.py  types.py
engine/src/firesim/data/: __init__.py  dem_loader.py  environment.py  fuel_loader.py  wui_loader.py
engine/src/firesim/fbp/: __init__.py  calculator.py  constants.py  crown_fire.py
engine/src/firesim/fwi/: __init__.py  calculator.py
engine/src/firesim/spread/: __init__.py  cellular.py  ellipse.py  huygens.py  montecarlo.py  perimeter.py  simulator.py  slope.py  spotting.py
engine/src/firesim/spread/__pycache__/: slope.calculate_directional_slope_factor-30.py310.1.nbc  slope.calculate_directional_slope_factor-30.py310.nbi  (+2 more)
engine/tests/: conftest.py
engine/tests/data/: test_dem_loader.py  test_fuel_loader_real.py  test_loaders.py  test_synthetic_grid.py
engine/tests/fbp/: test_calculator.py  test_constants.py  test_crown_fire.py
engine/tests/fwi/: test_calculator.py
engine/tests/spread/: test_cellular.py  test_ellipse.py  test_huygens.py  test_montecarlo.py  test_perimeter.py  test_simulator.py  test_slope.py  test_spotting.py
(+29 files in other folders)
