[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "firesim"
version = "3.0.0"
description = "Canadian FBP fire spread simulation engine"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "numba>=0.58.0",
    "scipy>=1.11.0",
    "shapely>=2.0.0",
    "rasterio>=1.3.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/firesim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
